# privacyguard-mcp

./: .env.example  .gitignore  BUSINESS_PLAN.md  COMPETITIVE_STRATEGY.md  CONTRIBUTING.md  Cargo.toml  DAY1_PROGRESS.md  LAUNCH_CHECKLIST.md  LEAN_PLAN.md  PROJECT_REFLECTION.md  README.md  claude_desktop_config.json  demo.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
compliance/: hipaa-template.toml
scripts/: daily-report.sh
src/: lib.rs  main.rs  server.rs
src/tools/: audit.rs  consent.rs  mod.rs  ollama.rs  policy.rs  privacy.rs
